--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^0.5.3+4
   # https://github.com/xuelongqy/flutter_easyrefresh
   flutter_easyrefresh: ^2.0.0
+  # https://pub.dev/packages/flutter_staggered_grid_view
+  flutter_staggered_grid_view: "^0.2.7"
 
 dev_dependencies:
   flutter_test:
